NXP-33602: Add thundering herd protection to principal cache